--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,15 +5,26 @@ server.servlet.context-path=/microservice-template
 # Application Configuration
 spring.application.name=microservice-template
 
-# Database Configuration (uncomment and configure as needed)
+# H2 Database Configuration (for development and testing)
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# H2 Console (for development - access at http://localhost:8080/microservice-template/h2-console)
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# JPA Configuration
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# Production Database Configuration (uncomment and configure as needed)
 # spring.datasource.url=jdbc:postgresql://localhost:5432/microservice-template-db
 # spring.datasource.username=microservice-template-user
 # spring.datasource.password=password
 # spring.datasource.driver-class-name=org.postgresql.Driver
-
-# JPA Configuration
-# spring.jpa.hibernate.ddl-auto=update
-# spring.jpa.show-sql=true
 
 # Logging Configuration
 logging.level.tz.co.itrust=DEBUG
